--- a/views/resetpass.pug
+++ b/views/resetpass.pug
@@ -92,6 +92,7 @@ body
         })
           .then(response => {
             alert('Success, Password Changed :) Go Back to the App And Login ');
+            document.write("Your Password successfully Changed!");
           })
           .catch(err => {
             alert("Error: Passwords are not same or Try Again later!")
